# databricks-gepa-workshop

./: .gitignore  CONTRIBUTING.md  PREREQUISITES.md  README.md  WORKSHOP.md  WORKSHOP_AGENDA.md  pyproject.toml  requirements-optional.txt  requirements.txt
docs/: FLOW.md  KNOBS.md  MAPPING_TO_META_KARL.md
notebooks/: 00_quickstart_databricks.py  01_end_to_end_smallscale.py  02_optional_real_dspy_gepa.py  03_optional_real_mlflow_gepa.py
scripts/: run_all.py  validate.py
src/gepa_lab/: __init__.py  agent.py  databricks_llm.py  experiment.py  metrics.py  mini_gepa.py  reporting.py  retrieval.py
src/meta_gepa_lab/: agent.py  config.py  data.py  experiment.py  metrics.py  mini_gepa.py  mlflow_utils.py  optional_true_dspy.py  optional_true_mlflow.py  reporting.py  retrieval.py
